<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:paddingTop="@dimen/primary_header_top"
    android:background="@drawable/bg_main">
    <include layout="@layout/view_secondary_header"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_margin" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/page_margin" android:paddingTop="@dimen/ui_gap_group" android:paddingBottom="@dimen/ui_gap_control">
        <LinearLayout android:id="@+id/tour_steps" android:layout_width="0dp" android:layout_weight="1"
            android:layout_height="wrap_content" android:orientation="horizontal" android:importantForAccessibility="no" />
        <TextView android:id="@id/tour_progress" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginStart="14dp"
            android:textColor="@color/text_secondary" android:textSize="@dimen/ui_text_label" />
    </LinearLayout>
    <ScrollView android:id="@+id/tour_scroll" android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1" android:fillViewport="true" android:clipToPadding="false">
        <LinearLayout android:id="@+id/tour_content" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:paddingHorizontal="@dimen/page_margin" android:paddingTop="@dimen/ui_gap_group" android:paddingBottom="@dimen/ui_gap_section" />
    </ScrollView>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingHorizontal="@dimen/page_margin"
        android:paddingTop="@dimen/ui_gap_control" android:paddingBottom="20dp">
        <androidx.appcompat.widget.AppCompatButton android:id="@id/tour_next"
            style="@style/Widget.SubHub.PrimaryButton" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:minHeight="52dp" android:textAllCaps="false" />
        <TextView android:id="@id/tour_skip" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:minHeight="48dp" android:gravity="center"
            android:text="@string/tour_skip" android:textSize="@dimen/ui_text_body" android:textColor="@color/text_secondary"
            android:clickable="true" android:focusable="true" android:background="?attr/selectableItemBackground" />
    </LinearLayout>
</LinearLayout>
