...
                        </com.subhub.app.util.FormRow>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/safety_config_card" style="@style/Widget.SubHub.CompactCard" android:layout_width="match_parent" android:layout_marginHorizontal="0dp" android:layout_marginTop="@dimen/ui_gap_section" android:visibility="visible">
                        <TextView style="@style/Widget.SubHub.SectionHeader" android:text="@string/wallet_safety_title" />
                        <com.subhub.app.util.FormRow android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ui_gap_control">
                            <LinearLayout style="@style/Widget.SubHub.WalletFieldTile">
                                <TextView android:labelFor="@id/daily_cap" style="@style/Widget.SubHub.WalletFieldLabel" android:text="@string/wallet_daily_cap" />
                                <EditText android:id="@+id/daily_cap" style="@style/Widget.SubHub.MoneyInput" />
                            </LinearLayout>
                            <LinearLayout style="@style/Widget.SubHub.WalletFieldTile">
                                <TextView android:labelFor="@id/weekly_cap" style="@style/Widget.SubHub.WalletFieldLabel" android:text="@string/wallet_weekly_cap" />
                                <EditText android:id="@+id/weekly_cap" style="@style/Widget.SubHub.MoneyInput" />
                            </LinearLayout>
                        </com.subhub.app.util.FormRow>
                        <LinearLayout style="@style/Widget.SubHub.WalletFieldTile" android:layout_width="match_parent" android:layout_marginTop="@dimen/ui_gap_group">
                            <TextView android:labelFor="@id/mercy_minutes" style="@style/Widget.SubHub.WalletFieldLabel" android:text="@string/penance_mercy_label_input" />
                            <TextView style="@style/Widget.SubHub.WalletFieldHelp" android:text="@string/penance_mercy_help" />
                            <EditText android:id="@+id/mercy_minutes" style="@style/Widget.SubHub.IntegerInput" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@+id/paid_pause_config_card" style="@style/Widget.SubHub.CompactCard" android:layout_width="match_parent" android:layout_marginHorizontal="0dp" android:layout_marginTop="0dp" android:visibility="gone">
...
